# computer_vision

./: README.md
114598085_hw1/: README.md  main.typ
114598085_hw1/project_hw1/: .clangd  CMakeLists.txt  CMakePresets.json
114598085_hw1/project_hw1/include/: color_trans.hpp  convolution.hpp  opencv_bridge.hpp  pixel_types.hpp  quantization.hpp
114598085_hw1/project_hw1/src/: main.cpp
114598085_hw2/: README.md  main.typ
114598085_hw2/project_hw2/: .clang-format  CMakeLists.txt
114598085_hw2/project_hw2/include/: algorithm.hpp  benchmark_utils.hpp  convolution.hpp  filter.hpp  histogram.hpp  image.hpp  numeric_utils.hpp  padding.hpp
114598085_hw2/project_hw2/result_reports/: CKS_Q1_psnr.csv  CKS_Q2_psnr.csv  CKS_Q3_psnr.csv
114598085_hw2/project_hw2/src/: main.cpp
114598085_hw3/: README.md  main.typ
114598085_hw3/project_hw3/: .clang-format  CMakeLists.txt
114598085_hw3/project_hw3/include/: convolution.hpp  edge_detection.hpp  filter.hpp  line_detection.hpp  numeric_utils.hpp  pixel_transform.hpp  pixel_types.hpp
114598085_hw3/project_hw3/src/: hw3_pipeline.hpp  main.cpp
HW_PPT/: CV_114_HW1.pptx  CV_114_HW2.pptx
